--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,4 +9,4 @@ services:
     ports:
       - "6060:8080"
     volumes:
-      - ./snapper-config.yaml:/go/src/bin/snapper-config.yaml
+      - ./snapper-config.yaml:/go/src/github.com/harperreed/snapper/snapper-config.yaml
